<resources>
    <string name="app_name">뉴 자서전</string>
    <string name="app_db">project.db</string>
    <string name="user_info">USER_INFO</string>

    <string name="invite_message"> 초대되었습니다. </string>
    <string name="not_match_account">아이디 또는 비밀번호가 일치하지 않습니다.</string>

    <string name="kakao_login">카카오 계정으로 로그인</string>
    <string name="facebook_login">Facebook 계정으로 로그인</string>
    <string name="instagram_login">인스타 계정으로 로그인</string>
    <string name="naver_band_login">Band 계정으로 로그인</string>


    <string name="my_page">마이페이지</string>
    <string name="item_shop">아이템 shop</string>
    <string name="silver_town">실버타운</string>
    <string name="shop">shop</string>


    <!-- keyword   -->
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="find_id">아이디 찾기</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="sign_up">회원가입</string>

    <string name="hint_id">아이디를 입력하세요</string>
    <string name="hint_password">비밀번호를 입력하세요</string>

    <string name="service1">스마트폰을 사용하기 어려운 분들을 위한 서비스로 본 사에서 고객과의 충분한 소통을 토앻 최적화 작업을 하는 서비스입니다. 기존의 실버앨범과의 차별화를 원하시는 분들에게 맞는 서비스 입니다.</string>
    <string name="service2">직접 만지고 전달해주고 싶으신가요? 오프라인 변환서비스를 신청하세요, 스마트폰이나 PC에서만 보는게 아닌 미니앨범으로 제작하여 선물이나 기념품으로 사용이 가능합니다. 소량부터 대량까지 모든 주문이 가능합니다.</string>
    <string name="service3">갑작스러운 이별에 대처할 수 있는 부고안내 서비스와 많은 사람들에게 축복의 소식도 전달 할 수 있는 온/오프라인 서비스를 이용하 실 수 있습니다.</string>


    <string name="friend_title">유민학교 친구들 기억나니?</string>
    <string name="friend_text">국민학교 3학년 친구들과.. \n 유한국민학교에 다녔던 우리 친구들 잘 지내고 있는지 궁금하다. \n 다들 어떻게 지내고 있니?</string>

    <string name="family_title">살면서 힘든일, 기쁜일도 많았지만...</string>
    <string name="family_text">일상의 순간들이 "무언가 다른 느낌"으로 다가오는 순간.. \n일상의 기쁨과 허무함을 함께 느끼게 되었다.\n이제 새롭게 시작하는 마음으로 이전과는 확연하게 달라진 몸과 마음, 자연스럽게 변화하게 된 생활리듬, 나 자신을 제대로 바로보고 가족모두의 안녕과 건강을 위해서...</string>

</resources>