<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="login_layout"
            type="com.example.study.LoginActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical"
            android:weightSum="1">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="0.1"
                android:text="로고 영역"
                ></androidx.appcompat.widget.AppCompatButton>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.24"
                android:orientation="vertical"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/edittext_rect"
                    android:orientation="horizontal"
                    android:paddingTop="14dp"
                    android:paddingBottom="14dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3"
                        android:gravity="center|left"
                        android:text="@string/id"
                        android:textSize="13sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"></TextView>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.7"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/user_id"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.94"
                            android:background="@null"
                            android:hint="@string/hint_id"
                            android:maxLength="20"
                            android:maxLines="1"
                            android:textSize="14sp" />

                        <ImageView
                            android:id="@+id/user_id_clear"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.06"
                            android:onClick="@{login_layout::clearEditText}"
                            android:src="@drawable/btn_del"
                            android:visibility="invisible" />


                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/edittext_rect"
                    android:orientation="horizontal"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="14dp"
                    android:paddingBottom="14dp"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3"
                        android:gravity="center|left"
                        android:text="@string/password"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.7"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/user_password"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.94"
                            android:background="@null"
                            android:hint="@string/hint_password"
                            android:inputType="textPassword"
                            android:maxLength="20"
                            android:maxLines="1"
                            android:textSize="14sp" />

                        <ImageView
                            android:id="@+id/user_password_clear"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.06"
                            android:onClick="@{login_layout::clearEditText}"
                            android:src="@drawable/btn_del"
                            android:visibility="invisible" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                android:orientation="vertical"
                android:weightSum="1">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.45"
                    android:background="@drawable/login_button_radius"
                    android:onClick="@{login_layout::loginEvent}"
                    android:text="로그인"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.55"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_weight="0.33"
                        android:background="@drawable/right_border"
                        android:gravity="center"
                        android:text="@string/find_id"
                        android:textSize="14sp"
                         />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_weight="0.33"
                        android:textSize="14sp"
                        android:background="@drawable/right_border"
                        android:gravity="center"
                        android:text="@string/find_password"
                         />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:textSize="14sp"
                        android:layout_weight="0.33"
                        android:gravity="center"
                        android:text="@string/sign_up"
                        />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="0.05"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/left_underline"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.45"
                    android:gravity="center"
                    android:text="                                    " />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.1"
                    android:gravity="center"
                    android:textSize="13sp"
                    android:text="또는" />

                <TextView
                    android:id="@+id/right_underline"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.45"
                    android:gravity="center"
                    android:text="                                    " />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.42"
                android:orientation="vertical"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="0.25"
                    android:background="@drawable/social_login_button_radius"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="0.1"
                        android:src="@drawable/img_kakao" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="0.9"
                        android:background="@android:color/transparent"
                        android:gravity="left|center"
                        android:text="@string/kakao_login"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="0.25"
                    android:background="@drawable/social_login_button_radius"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="0.1"
                        android:src="@drawable/img_facebook" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="0.9"
                        android:background="@android:color/transparent"
                        android:gravity="left|center"
                        android:text="@string/facebook_login"
                        android:textAllCaps="false"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="0.25"
                    android:background="@drawable/social_login_button_radius"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="0.1"
                        android:src="@drawable/img_insta" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="0.9"
                        android:background="@android:color/transparent"
                        android:gravity="left|center"
                        android:text="@string/instagram_login"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="0.25"
                    android:background="@drawable/social_login_button_radius"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="0.1"
                        android:src="@drawable/img_band" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="0.9"
                        android:background="@android:color/transparent"
                        android:gravity="left|center"
                        android:text="@string/naver_band_login"
                        android:textAllCaps="false"
                        android:textStyle="bold" />

                </LinearLayout>


            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

