<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="main_layout"
            type="com.example.study.MainActivity" />
    </data>


    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/menu_drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="0.012">

                <ImageButton
                    android:id="@+id/drawer_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_menu" />

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    android:textStyle="normal"
                    android:textSize="16sp"
                    android:textColor="#222222"
                    android:text="행복e조" />

                <ImageView
                    android:id="@+id/toolbar_title_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/logo"
                    android:layout_gravity="center"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/write_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:background="@android:color/transparent"
                        android:onClick="@{main_layout::writerFragment}"
                        android:src="@drawable/ic_write_square" />

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/search_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:background="@android:color/transparent"
                        android:onClick="@{main_layout::searchFragment}"
                        android:src="@drawable/ic_search" />
                </LinearLayout>


            </androidx.appcompat.widget.Toolbar>
            <!--        <View-->
            <!--            android:id="@+id/view_toolbar"-->
            <!--            android:layout_width="match_parent"-->
            <!--            android:layout_height="2dp"-->
            <!--            android:background="@android:color/black"-->
            <!--            android:layout_below="@+id/toolbar"/>-->

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.9"
                android:background="@color/background">

            </FrameLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.088"
                android:orientation="horizontal"
                android:weightSum="1">

                <LinearLayout
                    android:id="@+id/my_page"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:background="@drawable/fragment_menu_layout_top_border"
                    android:onClick="@{main_layout::changeFragment}"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:weightSum="1">

                    <ImageView
                        android:id="@+id/ic_user"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_weight="0.6"
                        android:src="@drawable/ic_user" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.4"
                        android:gravity="center"
                        android:text="@string/my_page"
                        android:textColor="@color/fragment_menu"
                        android:textSize="10dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/item_shop"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:background="@drawable/fragment_menu_layout_top_border"
                    android:onClick="@{main_layout::changeFragment}"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:weightSum="1">

                    <ImageView
                        android:id="@+id/icon_nav_com"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_weight="0.6"
                        android:src="@drawable/icon_nav_com" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.4"
                        android:gravity="center"
                        android:text="@string/item_shop"
                        android:textColor="@color/fragment_menu"
                        android:textSize="10dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/silver_town"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:background="@drawable/fragment_menu_layout_top_border"
                    android:onClick="@{main_layout::changeFragment}"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:weightSum="1">

                    <ImageView
                        android:id="@+id/ic_town"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_weight="0.6"
                        android:src="@drawable/ic_town" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.4"
                        android:gravity="center"
                        android:text="@string/silver_town"
                        android:textColor="@color/fragment_menu"
                        android:textSize="10dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/shop"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:background="@drawable/fragment_menu_layout_top_border"
                    android:onClick="@{main_layout::changeFragment}"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:weightSum="1">

                    <ImageView
                        android:id="@+id/ic_shopping"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_weight="0.6"
                        android:src="@drawable/ic_shopping" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.4"
                        android:gravity="center"
                        android:text="@string/shop"
                        android:textColor="@color/fragment_menu"
                        android:textSize="10dp" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <include
            android:id="@+id/custom_drawer_layout"
            layout="@layout/custom_drawer"></include>
        <!--        <com.google.android.material.navigation.NavigationView-->
        <!--            android:id="@+id/nav_view"-->
        <!--            android:layout_width="180dp"-->
        <!--            android:layout_height="match_parent"-->
        <!--            android:layout_gravity="start"-->
        <!--            android:fitsSystemWindows="true"-->
        <!--            app:headerLayout="@layout/navi_header"-->
        <!--            app:menu="@menu/navi_menu" />-->


    </androidx.drawerlayout.widget.DrawerLayout>
</layout>